Added test cases for services and Invoice upto 8th