@@ -8,6 +8,7 @@ import io.appium.java_client.android.nativekey.PressesKey;
 import org.openqa.selenium.Dimension;
 import org.openqa.selenium.Point;
 import org.openqa.selenium.WebElement;
+import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.interactions.PointerInput;
 import org.openqa.selenium.interactions.Sequence;
 import org.openqa.selenium.support.ui.ExpectedConditions;
@@ -19,6 +20,7 @@ import java.io.IOException;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Properties;
 import java.util.concurrent.TimeUnit;
 
@@ -73,53 +75,19 @@ public class Utility extends Base
 
         driver.perform(Collections.singletonList(swipe));
     }
-    protected static void swipe(Point start, Point end, Duration duration) {
 
-        PointerInput input = new PointerInput(PointerInput.Kind.TOUCH, "finger1");
-        Sequence swipe = new Sequence(input, 0);
-        swipe.addAction(input.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), start.x, start.y));
-        swipe.addAction(input.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
-        /*if (isAndroid) {
-            duration = duration.dividedBy(ANDROID_SCROLL_DIVISOR);
-        } else {
-            swipe.addAction(new Pause(input, duration));
-            duration = Duration.ZERO;
-        }*/
-        swipe.addAction(input.createPointerMove(duration, PointerInput.Origin.viewport(), end.x, end.y));
-        swipe.addAction(input.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
-        driver.perform(ImmutableList.of(swipe));
+    public static void customizeScrollByCoordinates(AndroidDriver driver, int startX, int startY, int endX, int endY) {
+        // Define touch input
+        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
+        Sequence swipe = new Sequence(finger, 0);
+
+        // Move from starting position to ending position
+        swipe.addAction(finger.createPointerMove(Duration.ZERO, PointerInput.Origin.viewport(), startX, startY));
+        swipe.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
+        swipe.addAction(finger.createPointerMove(Duration.ofMillis(500), PointerInput.Origin.viewport(), endX, endY));
+        swipe.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
+
+        driver.perform(List.of(swipe));
     }
-    public enum ScrollDirection {
-        UP, DOWN, LEFT, RIGHT
-    }
-    public static void scroll(ScrollDirection dir, double scrollRatio) {
-        Duration SCROLL_DUR=Duration.ofMillis(400);
-        if (scrollRatio < 0 || scrollRatio > 1) {
-            throw new Error("Scroll distance must be between 0 and 1");
-        }
-        Dimension size = driver.manage().window().getSize();
-        System.out.println(size);
-        Point midPoint = new Point((int) (size.width * 0.3), (int) (size.height * 0.5));
-        int bottom = midPoint.y + (int) (midPoint.y * scrollRatio);
-        int top = midPoint.y - (int) (midPoint.y * scrollRatio);
-        //Point Start = new Point(midPoint.x, bottom );
-        //Point End = new Point(midPoint.x, top );
-        int left = midPoint.x - (int) (midPoint.x * scrollRatio);
-        int right = midPoint.x + (int) (midPoint.x * scrollRatio);
-
-        if (dir == ScrollDirection.UP) {
-            swipe(new Point(midPoint.x, top), new Point(midPoint.x, bottom), SCROLL_DUR);
-        } else if (dir == ScrollDirection.DOWN) {
-            swipe(new Point(midPoint.x, bottom), new Point(midPoint.x, top), SCROLL_DUR);
-        } else if (dir == ScrollDirection.LEFT) {
-            swipe(new Point(left, midPoint.y), new Point(right, midPoint.y), SCROLL_DUR);
-        } else {
-            swipe(new Point(right, midPoint.y), new Point(left, midPoint.y), SCROLL_DUR);
-        }
-    }
-
-
-
-
 
 }
